# wsu

./: .gitignore  README.md  b.json  r_env
csc5050/: CMakeLists.txt  README.md  out  persentation.md  tmpp86vdtby-ascii.cast  tmpxmcfuuzh-ascii.cast
csc5050/ass1/: CMakeLists.txt  README.md
csc5050/ass2/: CMakeLists.txt  README.md  out  q1.out  q1.short.out  q1.uc.out  q2.out  q3.out  q4.out
csc5050/ass2/include/: Complex.cpp  Complex.h  read_number.cpp  recursion.h
csc5050/ass2/src/: q1.cpp  q2.cpp  q3.cpp  q4.cpp
csc5050/ass3/: CMakeLists.txt  README.md  q1.out  q2.out  q3.out  q4.out
dsa-6000/: 20191112.R  Bayes Decision Theory and  Bayes Classifier.pages  HW 3.Rmd  HW-3.html  Lab Ch4 end-of-class submission.Rmd  Lab-Ch4-end-of-class-submission.html  Lab_Exercise_1.R  Lab_IntroductionToR.html  Lab_week5_hw2.Rmd  Lab_week5_hw2.html  Mid-term_review.key  ROC.R  Shor Bio.pages  Untitled.pages  Week2_lab.R  Week2_lecture.R  classification_training.csv  flightDelays.csv  hw1.R  hw1.md  hw3.R  lab-exercise-w4.R  lab-exercise-w5.R  stats-overview.html  week2.R
dsa6300/: 10.13.xlsx  10.14.xlsx  HW3-s.pptx  HW6.md  HW7-Q1.xlsx  HW7.md  HW7.xlsx  hw1.docx  hw1.md  hw2-key.key  hw6.docx
dsb-6000/: selecters.txt
labs/: Auto.data  labseasion1.r  labseasion2.R
methods/: Auto.data  Lab4.R  homework_1.R  homework_1.md  homework_2.md  hw1.R  hw2.R
project/: README.md
reading/: Hadoop-Spark Cluster.docx  dsa6200_-_operations_research_-_fall_2017.docx  dsa_6300_-_decison_analysis_and_simulation.pages  dsa_7500_-_data_science_and_analytics_practicum_course.pages
(+70 files in other folders)
