CMAKE_MINIMUM_REQUIRED(VERSION 3.1)

# Global vars
set(CMAKE_CXX_STANDARD 11)
SET(CMAKE_BUILD_TYPE Debug)
SET(CMAKE_PROJECT_NAME "cs5050")
#SET(EXECUTABLE_NAME "cs5050")

SET(EXECUTABLE_VERSION_MAJOR "1")
SET(EXECUTABLE_VERSION_MINOR "0")
SET(EXECUTABLE_VERSION_PATCH "0")

SET(CMAKE_MODULE_PATH
  ${CMAKE_SOURCE_DIR}/CMake/Modules
 )

SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin/)
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin/)
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin/)

#set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/Modules/")

SET(EXECUTABLE_VERSION "${EXECUTABLE_VERSION_MAJOR}.${EXECUTABLE_VERSION_MINOR}.${EXECUTABLE_VERSION_PATCH}")

#SET(CMAKE_VERBOSE_MAKEFILE OFF)

set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -v")

SET(CMAKE_BUILD_TYPE Debug)

#Begin Project
PROJECT(${CMAKE_PROJECT_NAME})

MESSAGE(STATUS "Current built type: ${CMAKE_BUILD_TYPE}")
MESSAGE(STATUS "Current build type flags: ${CMAKE_CXX_FLAGS_${CMAKE_BUILD_TYPE}}")
MESSAGE(STATUS "Configuring application ${APPLICATION_NAME}")

set(CMAKE_MACOSX_RPATH 1)

#Main Binary
include_directories( src )

#Library
include_directories( lib )

include_directories( include )


FILE(GLOB SOURCES "include/*.h" "include/*.cpp" "src/*.cpp")

ADD_EXECUTABLE(q1 "src/q1.cpp")
#ADD_EXECUTABLE(q2 "src/q2.cpp")
ADD_EXECUTABLE(q4 "src/q4.cpp")

#ADD_EXECUTABLE(${EXECUTABLE_NAME} ${SOURCES})
